# MacrOS-Intel

./: .gitmodules  MANIFEST.in  pop_weather_config.json  pyproject.toml  setup.py
MacrOSINT/: app.py  config.py  setup_utils.py
MacrOSINT/callbacks/: agricultural.py  esr.py
MacrOSINT/components/: chart_components.py  frames.py  table_client_updater.py
MacrOSINT/data/: __init__.py  async_tables.py  data_tables.py
MacrOSINT/data/sources/eia/: EIA_API.py  api_tools.py
MacrOSINT/data/sources/usda/api_wrappers/: esr_api.py  esr_staging_api.py  psd_api.py  usda_quickstats.py
MacrOSINT/layouts/: agriculture.py
MacrOSINT/mcp/: __init__.py  serializers.py  server.py
MacrOSINT/models/: __init__.py
MacrOSINT/models/agricultural/: agricultural_analytics.py
MacrOSINT/models/energy/: __init__.py  crude_oil_flows.py  natgas_storage_forecast.py
MacrOSINT/models/weather/: __init__.py  add_county_centroids.py  agclimate.py  climate_pipeline.py  config.py  density_station_locator.py  population_weather.py
MacrOSINT/utils/: async_table_wrapper.py  rename_tables.py
